<resources>
    <string name="app_name">Labyrinth</string>
    <!-- Welcome Fragment -->
    <string name="text_bouton_welcome_fragment">Play the game</string>
    <string name="log_in">Log in</string>
    <string name="log_in_facebook">Log in with facebook</string>
    <string name="text_bouton2_welcome_fragment">Score</string>
    <string name="not_connected">Not connected</string>
    <string name="button_parameters">Button parameters</string>
    <string name="disconnect">Currently connected</string>
    <string name="connection_method">Choose a connection method</string>
    <string name="error_authentication_canceled">Auth Cancelled&#8230;</string>
    <string name="connection_succeed">Auth successful !</string>
    <string name="error_unknown_error">Unknown error happened&#8230;</string>
    <string name="error_no_internet">No internet connection !</string>
    <string name="account_created_successfully">You have successfully create your account</string>
    <string name="you_need_to_have_an_account_to_play">You must have an account to play</string>
    <string name="you_need_to_have_an_account_to_see_scores">You must have an account to see scores</string>
    <string name="you_must_have_an_account_to_see_your_profile">You must have an account to see your profile</string>
    <string name="logged_out">You have been logged out</string>
    <string name="log_off">Log off</string>
    <!-- Parameters Activity -->
    <string name="title_parameters_activity">Parameters</string>
    <!-- Parameters Activity Tabs -->
    <string name="header_group_example">Example header group</string>
    <!-- Parameters Activity Tabs Elements -->
    <string name="header_example">Header example</string>
    <string name="description_example">Description example</string>
    <!-- Account Activity -->
    <string name="title_account_activity">Your account</string>
    <!-- Game Fragment -->
    <string name="title_game_fragment">Labyrinth</string>
    <string name="button_top_arrow">Top arrow of button</string>
    <string name="button_down_arrow">Down arrow of button</string>
    <string name="button_left_arrow">Left arrow of button</string>
    <string name="button_right_arrow">Right arrow of button</string>
    <string name="Error_data_recuperation">Error data recuperation</string>
    <string name="documentsnapshot_is_null_or_doesn_t_exist">DocumentSnapshot is null or doesn\'t exist</string>

    <!-- Score Fragment -->
    <string name="title_score_fragment">Score</string>
    <string name="Error_users_retrieval">Error during users retrieval</string>
    <string name="user_name">Username</string>
    <string name="user_score">0</string>
    <string name="error_charging_scores">Error charging scores.</string>

    <!-- Account Activity -->
    <string name="username">Username</string>
    <string name="email_address_label">Your email :</string>
    <string name="update_username">Update your username</string>
    <string name="deconnection">Log off</string>
    <string name="delete_account">delete your account</string>
    <string name="score_label">Your score :</string>
    <string name="account_score">User score</string>
    <string name="account_email">User email</string>
    <string name="info_no_email_found">No email found\n</string>
    <string name="info_no_username_found">No username found</string>
    <string name="popup_message_confirmation_delete_account">Do you confirm deleting your account ?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="confirm_change_username">Confirm</string>
    <string name="update_image">Update your profile image</string>
    <string name="permission_required_to_pick_an_image">Permission required to pick an image</string>
    <string name="upload_failed">Upload failed</string>
    <string name="error_deleting_account">Error deleting account</string>
    <string name="error_deleting_storage">Error deleting storage</string>
    <string name="error_deleting_image">No profile image to delete</string>
    <string name="error_fetching_user_data">Error fetching user data</string>
    <string name="error_creating_user">Error creating user</string>
    <string name="delete_user_failed">Failed deleting your account</string>
    <string name="username_updated_successfully">Username updated successfully</string>
    <string name="failed_to_update_username">Failed to update username</string>
    <string name="you_are_not_logged_in">You are not logged in.</string>
    <string name="user_data_not_found">User data not found.</string>
    <string name="no_user_is_currently_logged_in">No user is currently logged in.</string>
    <string name="deconnection_failed">Deconnection failed</string>
    <string name="invalid_image_url">Invalid image url</string>
    <string name="invalid_username">Invalid username</string>
    <string name="username_changed">Username changed</string>
    <string name="profile_image_changed">Profile image changed</string>
    <!-- UserRepository -->
    <string name="unknown_error">Unknown error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SignIn Fragment -->
    <string name="text_sign_in_button_sign_in_fragment">Sign in</string>
    <string name="email_edit_text_sign_in_fragment">Email</string>
    <string name="password_edit_text_sign_in_fragment">Password</string>
    <string name="text_sign_up_sign_in_fragment">Don\'t have an account? Sign Up</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="failed_to_update_image">Failed to update image</string>
    <string name="creation_succeed">Account creation success</string>
    <string name="account_deleted_success">Account is deleted</string>
</resources>