<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">


    <LinearLayout
        android:id="@+id/header_parameters_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/header_icon_parameters_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/title_account_activity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/account_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_parameters_activity">

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textColor="?attr/colorAccent">

            <!-- FIREBASE IMAGE -->
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/profile_logo"/>

            <EditText
                android:textColor="?attr/colorButtonNormal"
                android:textColorHint="?attr/colorButtonNormal"
                android:backgroundTint="?attr/colorButtonNormal"
                android:id="@+id/user_id_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:enabled="false"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/profile_container"
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_address_label"
                android:gravity="start"
                android:layout_marginStart="23dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="?attr/colorButtonNormal"/>

            <TextView
                android:id="@+id/user_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="15sp"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginEnd="23dp"
                android:hint="@string/account_email"
                android:textColor="?attr/colorButtonNormal"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_container"
            android:layout_below="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/score_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_label"
                android:gravity="start"
                android:layout_marginStart="23dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="?attr/colorButtonNormal"/>

            <TextView
                android:id="@+id/user_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="15sp"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginEnd="23dp"
                android:hint="@string/account_score"
                android:textColor="?attr/colorButtonNormal"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/buttons_connection"
            android:layout_below="@id/score_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button_change_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/update_username"
                android:textColor="?attr/colorButtonNormal"
                android:drawableLeft="@drawable/account_icon_button"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_change_image"
                android:layout_below="@id/button_change_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/update_image"
                android:textColor="?attr/colorButtonNormal"
                android:drawableLeft="@drawable/account_image_icon_button"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_deconnection"
                android:layout_below="@id/button_change_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/deconnection"
                android:textColor="?attr/colorButtonNormal"
                android:drawableLeft="@drawable/account_deconnection_button"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_delete_account"
                android:layout_below="@id/button_deconnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/delete_account"
                android:textColor="?attr/colorButtonNormal"
                android:drawableLeft="@drawable/account_delete_button"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </RelativeLayout>



    </RelativeLayout>


</RelativeLayout>

