<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/header_parameters_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/header_icon_parameters_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/game_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/title_game_fragment"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_below="@id/header_parameters_activity"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"></FrameLayout>

    <!-- Joystick Container -->
    <RelativeLayout
        android:id="@+id/gameJoystick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameContainer"
        android:gravity="center_horizontal">

        <!-- Top Button -->
        <ImageButton
            android:id="@+id/buttonTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_top_arrow"
            android:src="@drawable/button_arrow_top"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"/>

        <!-- Left Button -->
        <ImageButton
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_arrow_left"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/button_left_arrow"
            android:layout_toLeftOf="@id/buttonTop"
            android:background="?android:attr/selectableItemBackground"/>

        <!-- Right Button -->
        <ImageButton
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_arrow_right"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/button_right_arrow"
            android:layout_toRightOf="@id/buttonTop"
            android:background="?android:attr/selectableItemBackground"/>

        <!-- Bottom Button -->
        <ImageButton
            android:id="@+id/buttonBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_arrow_down"
            android:layout_below="@id/buttonTop"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/button_down_arrow"
            android:layout_alignStart="@id/buttonTop"
            android:layout_alignEnd="@id/buttonTop"
            android:background="?android:attr/selectableItemBackground"/>

    </RelativeLayout>


</RelativeLayout>