<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:id="@+id/welcome_fragment_main_layout"
    tools:context=".ui.activities.fragments.WelcomeFragment">

    <LinearLayout
        android:id="@+id/header_parameters_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@color/google_blue">

        <ImageView
            android:id="@+id/header_icon_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text="@string/log_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/labyrinth_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="?attr/application_logo"/>

    <EditText
        android:id="@+id/email_text_input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labyrinth_image"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:textColor="?attr/colorButtonNormal"
        android:textColorHint="?attr/colorButtonNormal"
        android:backgroundTint="?attr/colorButtonNormal"
        android:hint="@string/email_edit_text_sign_in_fragment"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/mdp_text_input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text_input_edit"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="25sp"
        android:textColor="?attr/colorButtonNormal"
        android:textColorHint="?attr/colorButtonNormal"
        android:backgroundTint="?attr/colorButtonNormal"
        android:hint="@string/password_edit_text_sign_in_fragment"
        android:inputType="textPassword"
        android:drawableEnd="?attr/password_logo_close"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mdp_text_input_edit"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_sign_in_button_sign_in_fragment"
        android:drawableLeft="@drawable/account_icon_button"
        android:textSize="25sp"
        android:textColor="?attr/colorButtonNormal"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up_sign_in_fragment"
        android:textSize="20sp"
        android:layout_below="@id/button_sign_in"
        android:layout_centerHorizontal="true"
        android:textColor="@color/google_blue"
        android:layout_marginTop="8dp"/>

</RelativeLayout>

